samples/_failures_safe/1761172389_f2da84_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_009935bb.c: In function ‘main’:
./samples/SAFE/__tmp_009935bb.c:154:13: error: expected declaration or statement at end of input
  154 |             continue;
      |             ^~~~~~~~
./samples/SAFE/__tmp_009935bb.c:154:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_009935bb.c:154:13: error: expected declaration or statement at end of input
